Stuff happened. I think it is a god time to save. Some stuff has been added that has not yet been tested or has not been made accessible.

--- a/FragmentDemo/.project
+++ b/FragmentDemo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FragmentDemo</name>
+	<name>FragmentChat</name>
 	<comment></comment>
 	<projects>
 	</projects>
