--- a/FragmentDemo/AndroidManifest.xml
+++ b/FragmentDemo/AndroidManifest.xml
@@ -20,18 +20,25 @@ limitations under the License.
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="15" />
+    <uses-sdk
+        android:minSdkVersion="4"
+        android:targetSdkVersion="15" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.android.fragments.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.android.fragments.FullScreenChatActivity"
+            android:label="@string/title_activity_full_screen_chat" >
         </activity>
     </application>
 
