--- a/FragmentDemo/AndroidManifest.xml
+++ b/FragmentDemo/AndroidManifest.xml
@@ -16,19 +16,19 @@ limitations under the License.
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.fragments"
+    package="com.android.chat.fragments"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="4"
-        android:targetSdkVersion="15" />
+        android:minSdkVersion="11"
+        android:targetSdkVersion="18" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="com.example.android.fragments.MainActivity"
+            android:name="com.android.chat.fragments.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +37,7 @@ limitations under the License.
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.android.fragments.FullScreenChatActivity"
+            android:name="com.android.chat.fragments.FullScreenChatActivity"
             android:label="@string/title_activity_full_screen_chat" >
         </activity>
     </application>
