--- a/FragmentDemo/AndroidManifest.xml
+++ b/FragmentDemo/AndroidManifest.xml
@@ -12,7 +12,7 @@ Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
-limitations under the License.
+limitations under the License.
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
@@ -39,6 +39,18 @@ limitations under the License.
         <activity
             android:name="com.android.chat.fragments.FullScreenChatActivity"
             android:label="@string/title_activity_full_screen_chat" >
+        </activity>
+        <activity
+            android:name="com.android.chat.fragments.LogonActivity"
+            android:label="@string/title_activity_logon"
+            android:parentActivityName="DialogFragment" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="DialogFragment" />
+        </activity>
+        <activity
+            android:name="com.android.chat.fragments.LogonDialogFragment"
+            android:label="@string/title_activity_logon" >
         </activity>
     </application>
 
