--- a/FragmentDemo/AndroidManifest.xml
+++ b/FragmentDemo/AndroidManifest.xml
@@ -23,8 +23,11 @@ limitations under the License.
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
@@ -61,6 +64,8 @@ limitations under the License.
             android:name="com.android.chat.fragments.RemoveUserDialogFragment"
             android:label="@string/title_activity_remove_user_dialog_fragment" >
         </activity>
+        
+        <service android:name="com.android.chat.fragments.MessageService" />
     </application>
 
 </manifest>
