--- a/GPS_Test/AndroidManifest.xml
+++ b/GPS_Test/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.gps_test.MainActivity"
+            android:name="com.gps_test.MainActivity"
             android:label="@string/app_name" 
             android:screenOrientation="landscape">
             <intent-filter>
