--- a/GPS_Test/bin/AndroidManifest.xml
+++ b/GPS_Test/bin/AndroidManifest.xml
@@ -25,6 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name="com.gps_test.TLEPullService"
+            android:exported="false"/>
     </application>
 
 </manifest>
