--- a/SSAgui/bin/AndroidManifest.xml
+++ b/SSAgui/bin/AndroidManifest.xml
@@ -27,7 +27,8 @@
         </activity>
         <activity
             android:name="mobilecomputing.ssagui.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="landscape">
         </activity>
         <service android:name="mobilecomputing.ssagui.TLEPullService"
             android:exported="false"/>
